# typeguard-protocols

./: .gitignore  README.rst  pyproject.toml
tests/: test_impl.py
typeguard_test/: __init__.py  impl.py
