[tool.poetry]
name = "typeguard_test"
version = "0.1.0"
description = ""
authors = ["Joel Beach <jtbeach@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
typeguard = "^2.8.0"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
